--- a/Views/RoomInfo/Index.cshtml
+++ b/Views/RoomInfo/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@{
+﻿@model List<HoiTroWebsite.Models.RoomInfo>
+
+@{
     ViewBag.Title = "Cho thuê, tìm người ở ghép";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
-@model List<HoiTroWebsite.Models.RoomInfo>
 
 <div class="container">
     <div class="row">
