--- a/Views/RoomInfo/RoomDetail.cshtml
+++ b/Views/RoomInfo/RoomDetail.cshtml
@@ -164,7 +164,7 @@
                             <a style="font-size:large; color: #E13427;" href="" title="1,8tr phòng khép kín full đồ gần Học Viện Tài Chính">@Model.title</a>
                         </h1>
                         <div class="clearfix"></div>
-                        <address class="post-address">@Model.location asfd asdf</address>
+                        <address class="post-address">@Model.location</address>
                         <div class="post-attributes">
                             <div class="item price"><i></i><span style="color: #16c784; font-weight: bold; font-size: 1.5rem">@gia_tien/tháng</span></div>
                             <div class="item acreage"><i></i><span> @Model.acreage m<sup>2</sup></span></div>
