--- a/Views/User/ManagePostRooms.cshtml
+++ b/Views/User/ManagePostRooms.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<HoiTroWebsite.Models.RoomInfo>
 @using HoiTroWebsite.Models2;
 @{
-    ViewBag.Title = "ManagePostRooms";
+    ViewBag.Title = "Quản lý tin đăng";
     Layout = "~/Views/Shared/_UserManagement.cshtml";
 }
 
@@ -21,7 +21,7 @@
     //}
 }
 
-<div class="bg-white mb-3 sticky-top">
+<div class="bg-white mb-3 sticky-top z-1">
     <h5 class="m-3">Quản lý tin đăng</h5>
     <ul class="nav nav-tabs ms-3" id="my_tab_post" role="tablist">
         <li class="nav-item" role="presentation">
