--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -180,7 +180,7 @@
                                             </div>
                                             <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
                                                 <h6 class="text-muted font-semibold">Profile Views</h6>
-                                                <h6 id="notification" class="font-extrabold mb-0">0</h6>
+                                                <h6 class="font-extrabold mb-0">0</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -237,7 +237,6 @@
                                     </div>
                                 </div>
                             </div>
-
                 </section>
             </div>
             @RenderBody()
